--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   plugin_platform_interface: ^2.1.4
   package_info_plus: ^4.0.2
   version: ^3.0.2
-  html: ^0.15.4
+  url_launcher: ^6.1.11
   dio: ^5.2.1
   fimber: ^0.6.6
 
