--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,8 +46,13 @@ android {
     }
 
     dependencies {
+
+        implementation 'com.google.android.play:app-update:2.1.0'
+        implementation 'com.google.android.play:app-update-ktx:2.1.0'
+
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
         testImplementation 'org.mockito:mockito-core:5.0.0'
+
     }
 
     testOptions {
