--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -47,14 +47,12 @@ android {
         applicationId "io.sourcya.playx_version_update_example"
         minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 20
+        versionName '0.3.0'
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
     }
