--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,41 +1,47 @@
 name: playx_version_update
 description: Easily show material update dialog in Android or Cupertino dialog in IOS with support for Google play in app updates.
-version: 0.0.3
+version: 0.0.4
 homepage: https://sourcya.com/
 repository: https://github.com/playx-flutter/playx_version_update
 issue_tracker: https://github.com/playx-flutter/playx_version_update/issues
 screenshots:
+  - description: 'This screenshot shows Android style update dialog.'
+    path: screenshots/screenshot4.jpg
   - description: 'This screenshot shows Google play flexible in app update'
     path: screenshots/screenshot1.jpg
   - description: 'This screenshot shows Google play immediate in app update'
     path: screenshots/screenshot2.jpg
   - description: 'This screenshot shows IOS style update dialog.'
     path: screenshots/screenshot3.jpg
-  - description: 'This screenshot shows Android style update dialog.'
-    path: screenshots/screenshot4.jpg
   - description: 'This screenshot shows update page.'
     path: screenshots/screenshot5.jpg
   - description: 'This screenshot shows Android style update dialog with release notes and force update enabled.'
     path: screenshots/screenshot6.jpg
 
+topics:
+    - playx
+    - update
+    - in app update
+    - Upgrade
+
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
-  flutter: ">=3.3.0"
+  sdk: '>=3.2.0 <4.0.0'
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.1.4
-  package_info_plus: ^4.0.2
+  plugin_platform_interface: ^2.1.7
+  package_info_plus: ^5.0.1
   version: ^3.0.2
-  url_launcher: ^6.1.12
-  dio: ^5.2.1+1
+  url_launcher: ^6.2.1
+  dio: ^5.3.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.2
+  flutter_lints: ^3.0.1
 
 flutter:
   plugin:
