--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: playx_version_update
 description: Easily show material update dialog in Android or Cupertino dialog in IOS with support for Google play in app updates.
-version: 0.0.4
+version: 0.0.5
 homepage: https://sourcya.com/
 repository: https://github.com/playx-flutter/playx_version_update
 issue_tracker: https://github.com/playx-flutter/playx_version_update/issues
 screenshots:
+  - description: 'This screenshot shows Google play flexible in app update flow'
+    path: screenshots/screenshot7.png
   - description: 'This screenshot shows Android style update dialog.'
     path: screenshots/screenshot4.jpg
-  - description: 'This screenshot shows Google play flexible in app update'
-    path: screenshots/screenshot1.jpg
   - description: 'This screenshot shows Google play immediate in app update'
     path: screenshots/screenshot2.jpg
   - description: 'This screenshot shows IOS style update dialog.'
@@ -32,16 +32,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  plugin_platform_interface: ^2.1.7
-  package_info_plus: ^5.0.1
+  plugin_platform_interface: ^2.1.8
+  package_info_plus: ^8.0.0
   version: ^3.0.2
-  url_launcher: ^6.2.1
-  dio: ^5.3.4
+  url_launcher: ^6.2.6
+  dio: ^5.4.3+1
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 flutter:
   plugin:
