--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,6 +27,11 @@ apply plugin: 'kotlin-android'
 android {
     compileSdk 34
 
+    // Conditional for compatibility with AGP <4.2.
+    if (project.android.hasProperty("namespace")) {
+        namespace 'io.sourcya.playx.version.update'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
