--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: playx_version_update
 description: Easily show material update dialog in Android or Cupertino dialog in IOS with support for Google play in app updates.
-version: 0.0.5
+version: 0.0.6
 homepage: https://sourcya.com/
 repository: https://github.com/playx-flutter/playx_version_update
 issue_tracker: https://github.com/playx-flutter/playx_version_update/issues
@@ -33,11 +33,12 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.1.8
-  package_info_plus: ^8.0.0
+  package_info_plus: ^8.0.2
   version: ^3.0.2
-  url_launcher: ^6.2.6
-  dio: ^5.4.3+1
-  pretty_dio_logger: ^1.3.1
+  url_launcher: ^6.3.0
+  dio: ^5.7.0
+  pretty_dio_logger: ^1.4.0
+
 
 dev_dependencies:
   flutter_test:
