--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: playx_version_update
 description: Easily show material update dialog in Android or Cupertino dialog in IOS with support for Google play in app updates.
-version: 0.0.7
+version: 0.0.8
 homepage: https://sourcya.com/
 repository: https://github.com/playx-flutter/playx_version_update
 issue_tracker: https://github.com/playx-flutter/playx_version_update/issues
@@ -33,9 +33,9 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.1.8
-  package_info_plus: ^8.0.2
+  package_info_plus: ^8.1.2
   version: ^3.0.2
-  url_launcher: ^6.3.0
+  url_launcher: ^6.3.1
   dio: ^5.7.0
   pretty_dio_logger: ^1.4.0
 
@@ -43,7 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
+  lints: ^5.1.1
 
 flutter:
   plugin:
