feat: Update example app - 86c1jgqta

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
     defaultConfig {
         applicationId = "io.sourcya.playx_version_update_example"
-        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
