refactor: Update pubspec.yaml - 86c1jgqta

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: playx_version_update
 description: Easily show material update dialog in Android or Cupertino dialog in IOS with support for Google play in app updates.
 version: 0.1.0
-homepage: https://sourcya.com/
+homepage: https://sourcya.io
 repository: https://github.com/playx-flutter/playx_version_update
 issue_tracker: https://github.com/playx-flutter/playx_version_update/issues
 screenshots:
@@ -52,3 +52,7 @@ flutter:
       android:
         package: io.sourcya.playx_version_update
         pluginClass: PlayxVersionUpdatePlugin
+
+platforms:
+  android:
+  ios:
