--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: playx_version_update
 description: Easily show material update dialog in Android or Cupertino dialog in IOS with support for Google play in app updates.
-version: 0.1.0
+version: 0.2.0
 homepage: https://sourcya.io
 repository: https://github.com/playx-flutter/playx_version_update
 issue_tracker: https://github.com/playx-flutter/playx_version_update/issues
@@ -33,11 +33,10 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.1.8
-  package_info_plus: ^8.1.2
+  package_info_plus: ^8.3.0
   version: ^3.0.2
   url_launcher: ^6.3.1
-  dio: ^5.7.0
-  pretty_dio_logger: ^1.4.0
+  playx_network: ^0.4.0
 
 
 dev_dependencies:
