--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.1.8
-  package_info_plus: >=8.3.0 <10.0.0
+  package_info_plus: ">=8.3.0 <10.0.0"
   url_launcher: ^6.3.2
   playx_network: ^0.5.1
 
